--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,6 +1,7 @@
 plugins:
   activity_pub_enabled:
     default: true
+    client: true
   activity_pub_rate_limit_post_to_inbox_per_minute:
     default: 3
   activity_pub_note_excerpt_maxlength:
