--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,5 +4,7 @@ plugins:
     client: true
   activity_pub_rate_limit_post_to_inbox_per_minute:
     default: 3
+  activity_pub_rate_limit_get_object_per_minute:
+    default: 20
   activity_pub_note_excerpt_maxlength:
     default: 500
