--- a/config/settings.yml
+++ b/config/settings.yml
@@ -8,3 +8,13 @@ plugins:
     default: 20
   activity_pub_note_excerpt_maxlength:
     default: 500
+  activity_pub_require_signed_requests:
+    default: true
+  activity_pub_allowed_request_origins:
+    default: ""
+    type: host_list
+    list_type: simple
+  activity_pub_blocked_request_origins:
+    default: ""
+    type: host_list
+    list_type: simple
