Add object logging to rails logs with site setting

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -26,3 +26,5 @@ discourse_activity_pub:
     client: true
   activity_pub_verbose_logging:
     default: false
+  activity_pub_object_logging:
+    default: false
