--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Discourse",
   "license": "MIT",
   "devDependencies": {
-    "eslint-config-discourse": "^1.1.8"
+    "@discourse/lint-configs": "^1.3.1",
+    "ember-template-lint": "^5.13.0",
+    "eslint": "^8.55.0",
+    "prettier": "^2.8.8"
   }
 }
