--- a/config/settings.yml
+++ b/config/settings.yml
@@ -25,7 +25,7 @@ discourse_activity_pub:
     min: 1
     client: true
   activity_pub_post_status_visibility_groups:
-    default: "1|3|14" # auto group admin, staff, and trust_level_4
+    default: "0" # everyone
     type: group_list
     allow_any: false
     refresh: true
