--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,27 @@
 {
   "extends": "discourse/tsconfig-plugin",
   "include": [
-    "package.json",
     "admin/assets/javascripts/**/*",
     "assets/javascripts/**/*",
     "test/javascripts/**/*",
     "node_modules/discourse/declarations/**/*"
   ],
   "compilerOptions": {
-    "types": ["discourse/external-types"],
     "paths": {
       "discourse/plugins/discourse-activity-pub/*": [
         "./assets/javascripts/*"
       ],
       "discourse/plugins/discourse-activity-pub/admin/*": [
         "./admin/assets/javascripts/admin/*"
+      ],
+      "admin/*": ["./node_modules/discourse/declarations/admin/*"],
+      "float-kit/*": ["./node_modules/discourse/declarations/float-kit/*"],
+      "select-kit/*": ["./node_modules/discourse/declarations/select-kit/*"],
+      "truth-helpers": [
+        "./node_modules/discourse/declarations/truth-helpers/index.d.ts"
+      ],
+      "truth-helpers/*": [
+        "./node_modules/discourse/declarations/truth-helpers/*"
       ]
     }
   }
